# agent-rag-projs

custmer-support-rag/: .gitignore  app_file_uploader.py  app_qa.py  config_data.py  file_history_store.py  knowledge_base.py  pyproject.toml  rag.py  vector_stores.py
custmer-support-rag/data/: 尺码推荐.txt  洗涤养护.txt  颜色推荐.txt
food-recipe-recommender/: .gitignore  langgraph.json  pyproject.toml
food-recipe-recommender/app/: main.py
food-recipe-recommender/app/agents/: personal_chef.py
food-recipe-recommender/app/api/v1/: chat.py  oss.py
food-recipe-recommender/app/common/: logger.py
food-recipe-recommender/app/models/: schemas.py
food-recipe-recommender/app/static/: index.html
how-to-cook/: config.py  main.py  pyproject.toml
how-to-cook/rag/: __init__.py  data_preparation.py  generation_integration.py  index_construction.py  retrieval_optimization.py
react-agent/: .gitignore  app.py  main.py  pyproject.toml
react-agent/agent/: react_agent.py
react-agent/agent/tools/: agent_tools.py  middleware.py
react-agent/config/: chroma.yml
react-agent/model/: factory.py
react-agent/rag/: rag_service.py  vector_store.py
react-agent/utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
