[project]
name = "custmer-support-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dashscope>=1.25.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "load-dotenv>=0.1.0",
    "protobuf<=3.20.3",
    "streamlit>=1.57.0",
]
