[project]
name = "food-recipe-recommender"
version = "0.1.0"
description = "AI-powered recipe recommender based on uploaded food images"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alibabacloud-oss-v2>=1.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "langgraph-checkpoint>=4.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.26",
]
