[project]
name = "how-to-cook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dashscope>=1.25.18",
    "faiss-cpu>=1.13.2",
    "httpx[socks]>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "openai>=2.37.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
]
