[project]
name = "react-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dashscope>=1.25.18",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "pypdf>=6.11.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.57.0",
]
